source/extensions/asset/org.wcs.smart.asset/src/org/wcs/smart/asset/map/engine/parser/smart_query.jj
 /*=============================================
SMART Query Engine Language Syntax & Semantic actions 
=============================================*/
options
{
  LOOKAHEAD= 1;

  CHOICE_AMBIGUITY_CHECK = 2;
  OTHER_AMBIGUITY_CHECK = 1;
  STATIC = false;
  DEBUG_PARSER = false;
  DEBUG_LOOKAHEAD = false;
  DEBUG_TOKEN_MANAGER = false;
  ERROR_REPORTING = true;
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = false;
  IGNORE_CASE = false;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  SANITY_CHECK = true;
  FORCE_LA_CHECK = false;
}

PARSER_BEGIN(Parser)
package org.wcs.smart.asset.map.engine.parser;

import java.util.*;
import org.wcs.smart.asset.map.engine.*;

public class Parser
{

}

PARSER_END(Parser)

SKIP :
{
  " "
| "\t"
| "\r"
| "\n"
}

/*--------- Comments  -----------------*/
SPECIAL_TOKEN :
{
  < LINE_COMMENT : "//" (~[ "\r", "\n" ])* >
| < MULTI_LINE_COMMENT :
    "/*" (~[ "*" ])* "*"
    (
      "*"
    |
      (
        ~[ "*", "/" ] (~[ "*" ])* "*"
      )
    )*
    "/" >
}

/*--------- Keywords  -----------------*/
TOKEN [ IGNORE_CASE ] :
{
  < K_AND : "and" >
| < K_OR : "or" >
}


TOKEN :
{
 < LESS : "<" >
| < LESSEQUAL : "<=" >
| < GREATER : ">" >
| < GREATEREQUAL : ">=" >
| < EQUAL : "=" >
| < NOTEQUAL : "<>" >
| < OPENPAREN : "(" >
| < CLOSEPAREN : ")" >
| < SLASH : "/" >
| < PLUS : "+" >
| < MINUS : "-" >
| < TIMES : "*" >
| < CONTAINS : "contains" >
| < STREQUALS : "equals" >
| < BEFORE : "before" >
| < AFTER : "after" >
}

TOKEN : /* Numeric Constants */
{
  < NUMBER :
  	(["-","+"])?< FLOAT >
  | (["-","+"])?< FLOAT >
    (
      [ "e", "E" ] ([ "-", "+" ])? < FLOAT >
    )? 
    >
| < #FLOAT :
    < INTEGER >
  | < INTEGER > ("." < INTEGER >)?
  | "." < INTEGER > 
    >
| < #INTEGER : (< DIGIT >)+ >
| < #DIGIT : [ "0"-"9" ] >
| < #LETTER : [ "a"-"z", "A"-"Z" ] >
| < #SPECIAL_CHARS : ("." | "_")>
}

TOKEN : /* Literal Constants */
{
  < S_CONST_LITERAL : "true" | "false" >
 | <FILTER_OPEN : "[">
 |  <FILTER_CLOSE : "]">
}

/* Query Filters */
TOKEN : 
{

< DM_KEY : (< LETTER >)+(< DIGIT > | < LETTER > | < SPECIAL_CHARS >)* >
| < DATE_STRING : < DIGIT > < DIGIT > < DIGIT > < DIGIT > "-" < DIGIT > < DIGIT > "-" < DIGIT > < DIGIT >> 
  
}


TOKEN :
{
  < QUOTED_STRING :
    "\""
    (
      (~[ "\"", "\\", "\n", "\r" ])
    | ("\\" ~[ "\n", "\r" ])
    )*
    "\"" 
    >
}



/* ------------ Expressions ----------------------*/
IExpression CombinedExpression():
{
  
	IExpression expression;
}
{
	expression = CombinedExpressionPart()
	< EOF >
	 {return expression;}	  
}

IExpression CombinedExpressionPart():
{
  
	IExpression expression;
	IExpression expression2;
	Operator op;
	
}
{
	(
	  expression = ColumnExpressionPart()
	  (
			op = MathOp()
			expression2 = ColumnExpressionPart()
			{ expression = CombinedExpression.parse(expression, op, expression2); }
		 )*
	)
	{return expression;}	  
}

IExpression ColumnExpressionPart():
{
  IExpression expression;
}
{
	( expression = BracketExpression2() | expression = ColumnExpression() )
   {return expression;}	  
}

IExpression ColumnExpression():
{
  IExpression expression;
}
{
	< FILTER_OPEN >
	< DM_KEY > { expression = ColumnExpression.parse(token.image); }
	< FILTER_CLOSE >   {return expression;}	  
}




IExpression AttributeExpression():
{
  
	IExpression expression;
}
{
	expression = AttributeExpressionInternal()
	< EOF >
	 {return expression;}	  
}

IExpression AttributeExpressionInternal():
{
  
	IExpression expression;
	IExpression expression2;
	Operator op;
}
{
		(
			expression = FilterPart()
 			(
 	 			op = BooleanOp()
	  			expression2 = FilterPart()
				{expression = BooleanExpression.parse(expression, op, expression2);}
	  		)*
	  	)
	  {return expression;}	  
}


IExpression FilterPart():
{
  IExpression expression;
}
{
  	(  	
		expression = BracketExpression()
		|
		expression = AttributeFilter()
	)
	
	{return expression;}	   
}

IExpression BracketExpression():
{
  IExpression expression;
}
{
 	(
		< OPENPAREN >
		expression = AttributeExpressionInternal()
		< CLOSEPAREN >
	)
	
	{return BracketExpression.parse(expression);}	   
}
IExpression BracketExpression2():
{
  IExpression expression;
}
{
 	(
		< OPENPAREN >
		expression = CombinedExpressionPart()
		< CLOSEPAREN >
	)
	
	{return BracketExpression.parse(expression);}	   
}
AttributeExpression AttributeFilter():
{
	String attributeKey;
	Operator op;
	AttributeExpression expression;
	
}
{
  	< FILTER_OPEN >
  	attributeKey = AttributeKey()
  	(
		(			< EQUAL > { op = Operator.parse(token.image); }	
		  	(				< DM_KEY > { expression = AttributeExpression.parse(attributeKey, op, token.image); }
				|
				< S_CONST_LITERAL > { expression = AttributeExpression.parse(attributeKey, op, token.image); }
				|
				< NUMBER > { expression = AttributeExpression.parse(attributeKey, op, Double.parseDouble(token.image)); }
		 	) 
		)
		|
		(  			( < NOTEQUAL >  | < GREATER > | < GREATEREQUAL > | < LESS > | < LESSEQUAL >  ) { op = Operator.parse(token.image); }
			< NUMBER > { expression = AttributeExpression.parse(attributeKey, op, Double.parseDouble(token.image)); }
		)	
		|		( 		  < STREQUALS > { op = Operator.parse(token.image); }
		  (		    < QUOTED_STRING > { expression = AttributeExpression.parse(attributeKey, op, token.image); }
		  	|
		  	< DATE_STRING > { expression = AttributeExpression.parse(attributeKey, op, token.image); } 
		  )
		)
		|
		(
		  ( < AFTER> | < BEFORE > ) { op = Operator.parse(token.image); }
		  	< DATE_STRING > { expression = AttributeExpression.parse(attributeKey, op, token.image); } 
		)
		|
		(		  < CONTAINS > { op = Operator.parse(token.image); }
		  < QUOTED_STRING > { expression = AttributeExpression.parse(attributeKey, op, token.image); }
		)
		
	)
			
  < FILTER_CLOSE >
  
  {
  return expression;
  }
}

String AttributeKey() :
{}
{
  < DM_KEY >
	{
  	return token.image;
	}
}


Operator BooleanOp() :
{}
{
  ( < K_AND > | < K_OR> )
  {
    return Operator.parse(token.image);
  }
}


Operator MathOp():
{}
{
  ( < SLASH > | < PLUS >  | < MINUS > | < TIMES > )
  {
    return Operator.parse(token.image);
 }
}


