source/extensions/asset/org.wcs.smart.asset/src/org/wcs/smart/asset/map/engine/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package org.wcs.smart.asset.map.engine.parser;

import org.wcs.smart.asset.map.engine.AttributeExpression;
import org.wcs.smart.asset.map.engine.BooleanExpression;
import org.wcs.smart.asset.map.engine.BracketExpression;
import org.wcs.smart.asset.map.engine.ColumnExpression;
import org.wcs.smart.asset.map.engine.CombinedExpression;
import org.wcs.smart.asset.map.engine.IExpression;
import org.wcs.smart.asset.map.engine.Operator;

public class Parser implements ParserConstants {

/* ------------ Expressions ----------------------*/
  final public IExpression CombinedExpression() throws ParseException {
        IExpression expression;
    expression = CombinedExpressionPart();
    jj_consume_token(0);
          {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression CombinedExpressionPart() throws ParseException {
        IExpression expression;
        IExpression expression2;
        Operator op;
    expression = ColumnExpressionPart();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
      case PLUS:
      case MINUS:
      case TIMES:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      op = MathOp();
      expression2 = ColumnExpressionPart();
                          expression = CombinedExpression.parse(expression, op, expression2);
    }
         {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression ColumnExpressionPart() throws ParseException {
  IExpression expression;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAREN:
      expression = BracketExpression2();
      break;
    case FILTER_OPEN:
      expression = ColumnExpression();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression ColumnExpression() throws ParseException {
  IExpression expression;
    jj_consume_token(FILTER_OPEN);
    jj_consume_token(DM_KEY);
                     expression = ColumnExpression.parse(token.image);
    jj_consume_token(FILTER_CLOSE);
    {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression AttributeExpression() throws ParseException {
        IExpression expression;
    expression = AttributeExpressionInternal();
    jj_consume_token(0);
          {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression AttributeExpressionInternal() throws ParseException {
        IExpression expression;
        IExpression expression2;
        Operator op;
    expression = FilterPart();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_AND:
      case K_OR:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      op = BooleanOp();
      expression2 = FilterPart();
                                 expression = BooleanExpression.parse(expression, op, expression2);
    }
           {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression FilterPart() throws ParseException {
  IExpression expression;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OPENPAREN:
      expression = BracketExpression();
      break;
    case FILTER_OPEN:
      expression = AttributeFilter();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression BracketExpression() throws ParseException {
  IExpression expression;
    jj_consume_token(OPENPAREN);
    expression = AttributeExpressionInternal();
    jj_consume_token(CLOSEPAREN);
         {if (true) return BracketExpression.parse(expression);}
    throw new Error("Missing return statement in function");
  }

  final public IExpression BracketExpression2() throws ParseException {
  IExpression expression;
    jj_consume_token(OPENPAREN);
    expression = CombinedExpressionPart();
    jj_consume_token(CLOSEPAREN);
         {if (true) return BracketExpression.parse(expression);}
    throw new Error("Missing return statement in function");
  }

  final public AttributeExpression AttributeFilter() throws ParseException {
        String attributeKey;
        Operator op;
        AttributeExpression expression;
    jj_consume_token(FILTER_OPEN);
    attributeKey = AttributeKey();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      jj_consume_token(EQUAL);
                                    op = Operator.parse(token.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DM_KEY:
        jj_consume_token(DM_KEY);
                                             expression = AttributeExpression.parse(attributeKey, op, token.image);
        break;
      case S_CONST_LITERAL:
        jj_consume_token(S_CONST_LITERAL);
                                                      expression = AttributeExpression.parse(attributeKey, op, token.image);
        break;
      case NUMBER:
        jj_consume_token(NUMBER);
                                             expression = AttributeExpression.parse(attributeKey, op, Double.parseDouble(token.image));
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case LESS:
    case LESSEQUAL:
    case GREATER:
    case GREATEREQUAL:
    case NOTEQUAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NOTEQUAL:
        jj_consume_token(NOTEQUAL);
        break;
      case GREATER:
        jj_consume_token(GREATER);
        break;
      case GREATEREQUAL:
        jj_consume_token(GREATEREQUAL);
        break;
      case LESS:
        jj_consume_token(LESS);
        break;
      case LESSEQUAL:
        jj_consume_token(LESSEQUAL);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                                                         op = Operator.parse(token.image);
      jj_consume_token(NUMBER);
                                     expression = AttributeExpression.parse(attributeKey, op, Double.parseDouble(token.image));
      break;
    case STREQUALS:
      jj_consume_token(STREQUALS);
                                  op = Operator.parse(token.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case QUOTED_STRING:
        jj_consume_token(QUOTED_STRING);
                                        expression = AttributeExpression.parse(attributeKey, op, token.image);
        break;
      case DATE_STRING:
        jj_consume_token(DATE_STRING);
                                          expression = AttributeExpression.parse(attributeKey, op, token.image);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case BEFORE:
    case AFTER:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AFTER:
        jj_consume_token(AFTER);
        break;
      case BEFORE:
        jj_consume_token(BEFORE);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                                              op = Operator.parse(token.image);
      jj_consume_token(DATE_STRING);
                                          expression = AttributeExpression.parse(attributeKey, op, token.image);
      break;
    case CONTAINS:
      jj_consume_token(CONTAINS);
                                 op = Operator.parse(token.image);
      jj_consume_token(QUOTED_STRING);
                                      expression = AttributeExpression.parse(attributeKey, op, token.image);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(FILTER_CLOSE);
  {if (true) return expression;}
    throw new Error("Missing return statement in function");
  }

  final public String AttributeKey() throws ParseException {
    jj_consume_token(DM_KEY);
        {if (true) return token.image;}
    throw new Error("Missing return statement in function");
  }

  final public Operator BooleanOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_AND:
      jj_consume_token(K_AND);
      break;
    case K_OR:
      jj_consume_token(K_OR);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parse(token.image);}
    throw new Error("Missing return statement in function");
  }

  final public Operator MathOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SLASH:
      jj_consume_token(SLASH);
      break;
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      break;
    case TIMES:
      jj_consume_token(TIMES);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return Operator.parse(token.image);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1e0000,0x8000,0x180,0x8000,0x82000000,0x5e00,0x0,0x1800000,0x1e07e00,0x180,0x1e0000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x1,0x0,0x1,0x4,0x0,0x18,0x0,0x0,0x0,0x0,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
